tokens_lex/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    AS
    BREAK
    DEF
    DIC
    DIVIDEINT
    EXPONENT
    FROM
    IMPORT
    IS
    LIST
    MODULE
    NONE
    NOT
    PRINT
    RETURN
    SET
    THEN
    TUPLE

Grammar

Rule 0     S' -> sentencia
Rule 1     sentencia -> assign
Rule 2     sentencia -> for
Rule 3     sentencia -> while
Rule 4     sentencia -> if
Rule 5     sentencia -> assign sentencia
Rule 6     sentencia -> for sentencia
Rule 7     sentencia -> while sentencia
Rule 8     sentencia -> if sentencia
Rule 9     assign -> NAME EQUALS expr
Rule 10    assign -> NAME EQUALS list
Rule 11    assign -> NAME EQUALS cad
Rule 12    expr -> expr PLUS term
Rule 13    expr -> expr MINUS term
Rule 14    expr -> term
Rule 15    term -> term TIMES factor
Rule 16    term -> term DIVIDE factor
Rule 17    term -> factor
Rule 18    list -> LCORCHETE RCORCHETE
Rule 19    list -> LCORCHETE element RCORCHETE
Rule 20    list -> LCORCHETE element elements RCORCHETE
Rule 21    element -> factor
Rule 22    element -> NAME
Rule 23    element -> list
Rule 24    elements -> COMMA element
Rule 25    elements -> COMMA list
Rule 26    elements -> COMMA element elements
Rule 27    factor -> NUMBER
Rule 28    factor -> MINUS NUMBER
Rule 29    factor -> NAME
Rule 30    cad -> COMILLA NAME COMILLA
Rule 31    cad -> COMILLAD NAME COMILLAD
Rule 32    cad -> cad LCORCHETE index RCORCHETE
Rule 33    index -> factor
Rule 34    index -> factor DPOINT factor
Rule 35    index -> factor DPOINT factor DPOINT factor
Rule 36    while -> WHILE LPAREN comparison RPAREN DPOINT sentencia
Rule 37    while -> WHILE comparison DPOINT sentencia
Rule 38    while -> WHILE LPAREN comparison comparisons RPAREN DPOINT sentencia
Rule 39    while -> WHILE comparison comparisons DPOINT sentencia
Rule 40    comparisons -> AND comparison
Rule 41    comparisons -> AND comparison comparisons
Rule 42    comparisons -> OR comparison
Rule 43    comparisons -> OR comparison comparisons
Rule 44    bool -> TRUE
Rule 45    bool -> FALSE
Rule 46    comparison -> comp DEQUALS comp
Rule 47    comparison -> comp DIFFERENT comp
Rule 48    comparison -> comp HIGHER comp
Rule 49    comparison -> comp LESS comp
Rule 50    comparison -> comp HIGHEREQ comp
Rule 51    comparison -> comp LESSEQ comp
Rule 52    comparison -> bool
Rule 53    comp -> expr
Rule 54    comp -> element
Rule 55    comp -> bool
Rule 56    for -> FOR NAME IN RANGE LPAREN r_value RPAREN DPOINT assign
Rule 57    for -> FOR NAME IN RANGE LPAREN r_values RPAREN DPOINT assign
Rule 58    for -> FOR NAME IN NAME DPOINT assign
Rule 59    r_values -> r_value COMMA r_value
Rule 60    r_values -> r_value COMMA r_value COMMA r_value
Rule 61    r_value -> factor
Rule 62    r_value -> LEN LPAREN NAME RPAREN
Rule 63    if -> IF LPAREN comparison RPAREN DPOINT sentencia
Rule 64    if -> IF LPAREN comparison comparisons RPAREN DPOINT sentencia
Rule 65    if -> IF comparison DPOINT sentencia
Rule 66    if -> IF comparison comparisons DPOINT sentencia
Rule 67    if -> IF LPAREN comparison RPAREN DPOINT sentencia ELSE DPOINT sentencia
Rule 68    if -> IF LPAREN comparison comparisons RPAREN DPOINT sentencia ELSE DPOINT sentencia
Rule 69    if -> IF comparison DPOINT sentencia ELSE DPOINT sentencia
Rule 70    if -> IF comparison comparisons DPOINT sentencia ELSE DPOINT sentencia
Rule 71    if -> IF LPAREN comparison RPAREN DPOINT sentencia ELIF LPAREN comparison RPAREN DPOINT sentencia ELSE DPOINT sentencia
Rule 72    if -> IF LPAREN comparison comparisons RPAREN DPOINT sentencia ELIF LPAREN comparison comparisons RPAREN DPOINT sentencia ELSE DPOINT sentencia
Rule 73    if -> IF comparison DPOINT sentencia ELIF comparison DPOINT sentencia ELSE DPOINT sentencia
Rule 74    if -> IF comparison comparisons DPOINT sentencia ELIF comparison comparisons DPOINT sentencia ELSE DPOINT sentencia
Rule 75    if -> IF LPAREN comparison RPAREN DPOINT sentencia ELIF LPAREN comparison RPAREN DPOINT sentencia
Rule 76    if -> IF LPAREN comparison comparisons RPAREN DPOINT sentencia ELIF LPAREN comparison comparisons RPAREN DPOINT sentencia
Rule 77    if -> IF comparison DPOINT sentencia ELIF comparison DPOINT sentencia
Rule 78    if -> IF comparison comparisons DPOINT sentencia ELIF comparison comparisons DPOINT sentencia

Terminals, with rules where they appear

AND                  : 40 41
AS                   : 
BREAK                : 
COMILLA              : 30 30
COMILLAD             : 31 31
COMMA                : 24 25 26 59 60 60
DEF                  : 
DEQUALS              : 46
DIC                  : 
DIFFERENT            : 47
DIVIDE               : 16
DIVIDEINT            : 
DPOINT               : 34 35 35 36 37 38 39 56 57 58 63 64 65 66 67 67 68 68 69 69 70 70 71 71 71 72 72 72 73 73 73 74 74 74 75 75 76 76 77 77 78 78
ELIF                 : 71 72 73 74 75 76 77 78
ELSE                 : 67 68 69 70 71 72 73 74
EQUALS               : 9 10 11
EXPONENT             : 
FALSE                : 45
FOR                  : 56 57 58
FROM                 : 
HIGHER               : 48
HIGHEREQ             : 50
IF                   : 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78
IMPORT               : 
IN                   : 56 57 58
IS                   : 
LCORCHETE            : 18 19 20 32
LEN                  : 62
LESS                 : 49
LESSEQ               : 51
LIST                 : 
LPAREN               : 36 38 56 57 62 63 64 67 68 71 71 72 72 75 75 76 76
MINUS                : 13 28
MODULE               : 
NAME                 : 9 10 11 22 29 30 31 56 57 58 58 62
NONE                 : 
NOT                  : 
NUMBER               : 27 28
OR                   : 42 43
PLUS                 : 12
PRINT                : 
RANGE                : 56 57
RCORCHETE            : 18 19 20 32
RETURN               : 
RPAREN               : 36 38 56 57 62 63 64 67 68 71 71 72 72 75 75 76 76
SET                  : 
THEN                 : 
TIMES                : 15
TRUE                 : 44
TUPLE                : 
WHILE                : 36 37 38 39
error                : 

Nonterminals, with rules where they appear

assign               : 1 5 56 57 58
bool                 : 52 55
cad                  : 11 32
comp                 : 46 46 47 47 48 48 49 49 50 50 51 51
comparison           : 36 37 38 39 40 41 42 43 63 64 65 66 67 68 69 70 71 71 72 72 73 73 74 74 75 75 76 76 77 77 78 78
comparisons          : 38 39 41 43 64 66 68 70 72 72 74 74 76 76 78 78
element              : 19 20 24 26 54
elements             : 20 26
expr                 : 9 12 13 53
factor               : 15 16 17 21 33 34 34 35 35 35 61
for                  : 2 6
if                   : 4 8
index                : 32
list                 : 10 23 25
r_value              : 56 59 59 60 60 60
r_values             : 57
sentencia            : 5 6 7 8 36 37 38 39 63 64 65 66 67 67 68 68 69 69 70 70 71 71 71 72 72 72 73 73 73 74 74 74 75 75 76 76 77 77 78 78 0
term                 : 12 13 14 15 16
while                : 3 7

Parsing method: LALR

state 0

    (0) S' -> . sentencia
    (1) sentencia -> . assign
    (2) sentencia -> . for
    (3) sentencia -> . while
    (4) sentencia -> . if
    (5) sentencia -> . assign sentencia
    (6) sentencia -> . for sentencia
    (7) sentencia -> . while sentencia
    (8) sentencia -> . if sentencia
    (9) assign -> . NAME EQUALS expr
    (10) assign -> . NAME EQUALS list
    (11) assign -> . NAME EQUALS cad
    (56) for -> . FOR NAME IN RANGE LPAREN r_value RPAREN DPOINT assign
    (57) for -> . FOR NAME IN RANGE LPAREN r_values RPAREN DPOINT assign
    (58) for -> . FOR NAME IN NAME DPOINT assign
    (36) while -> . WHILE LPAREN comparison RPAREN DPOINT sentencia
    (37) while -> . WHILE comparison DPOINT sentencia
    (38) while -> . WHILE LPAREN comparison comparisons RPAREN DPOINT sentencia
    (39) while -> . WHILE comparison comparisons DPOINT sentencia
    (63) if -> . IF LPAREN comparison RPAREN DPOINT sentencia
    (64) if -> . IF LPAREN comparison comparisons RPAREN DPOINT sentencia
    (65) if -> . IF comparison DPOINT sentencia
    (66) if -> . IF comparison comparisons DPOINT sentencia
    (67) if -> . IF LPAREN comparison RPAREN DPOINT sentencia ELSE DPOINT sentencia
    (68) if -> . IF LPAREN comparison comparisons RPAREN DPOINT sentencia ELSE DPOINT sentencia
    (69) if -> . IF comparison DPOINT sentencia ELSE DPOINT sentencia
    (70) if -> . IF comparison comparisons DPOINT sentencia ELSE DPOINT sentencia
    (71) if -> . IF LPAREN comparison RPAREN DPOINT sentencia ELIF LPAREN comparison RPAREN DPOINT sentencia ELSE DPOINT sentencia
    (72) if -> . IF LPAREN comparison comparisons RPAREN DPOINT sentencia ELIF LPAREN comparison comparisons RPAREN DPOINT sentencia ELSE DPOINT sentencia
    (73) if -> . IF comparison DPOINT sentencia ELIF comparison DPOINT sentencia ELSE DPOINT sentencia
    (74) if -> . IF comparison comparisons DPOINT sentencia ELIF comparison comparisons DPOINT sentencia ELSE DPOINT sentencia
    (75) if -> . IF LPAREN comparison RPAREN DPOINT sentencia ELIF LPAREN comparison RPAREN DPOINT sentencia
    (76) if -> . IF LPAREN comparison comparisons RPAREN DPOINT sentencia ELIF LPAREN comparison comparisons RPAREN DPOINT sentencia
    (77) if -> . IF comparison DPOINT sentencia ELIF comparison DPOINT sentencia
    (78) if -> . IF comparison comparisons DPOINT sentencia ELIF comparison comparisons DPOINT sentencia

    NAME            shift and go to state 6
    FOR             shift and go to state 7
    WHILE           shift and go to state 8
    IF              shift and go to state 9

    sentencia                      shift and go to state 1
    assign                         shift and go to state 2
    for                            shift and go to state 3
    while                          shift and go to state 4
    if                             shift and go to state 5

state 1

    (0) S' -> sentencia .



state 2

    (1) sentencia -> assign .
    (5) sentencia -> assign . sentencia
    (1) sentencia -> . assign
    (2) sentencia -> . for
    (3) sentencia -> . while
    (4) sentencia -> . if
    (5) sentencia -> . assign sentencia
    (6) sentencia -> . for sentencia
    (7) sentencia -> . while sentencia
    (8) sentencia -> . if sentencia
    (9) assign -> . NAME EQUALS expr
    (10) assign -> . NAME EQUALS list
    (11) assign -> . NAME EQUALS cad
    (56) for -> . FOR NAME IN RANGE LPAREN r_value RPAREN DPOINT assign
    (57) for -> . FOR NAME IN RANGE LPAREN r_values RPAREN DPOINT assign
    (58) for -> . FOR NAME IN NAME DPOINT assign
    (36) while -> . WHILE LPAREN comparison RPAREN DPOINT sentencia
    (37) while -> . WHILE comparison DPOINT sentencia
    (38) while -> . WHILE LPAREN comparison comparisons RPAREN DPOINT sentencia
    (39) while -> . WHILE comparison comparisons DPOINT sentencia
    (63) if -> . IF LPAREN comparison RPAREN DPOINT sentencia
    (64) if -> . IF LPAREN comparison comparisons RPAREN DPOINT sentencia
    (65) if -> . IF comparison DPOINT sentencia
    (66) if -> . IF comparison comparisons DPOINT sentencia
    (67) if -> . IF LPAREN comparison RPAREN DPOINT sentencia ELSE DPOINT sentencia
    (68) if -> . IF LPAREN comparison comparisons RPAREN DPOINT sentencia ELSE DPOINT sentencia
    (69) if -> . IF comparison DPOINT sentencia ELSE DPOINT sentencia
    (70) if -> . IF comparison comparisons DPOINT sentencia ELSE DPOINT sentencia
    (71) if -> . IF LPAREN comparison RPAREN DPOINT sentencia ELIF LPAREN comparison RPAREN DPOINT sentencia ELSE DPOINT sentencia
    (72) if -> . IF LPAREN comparison comparisons RPAREN DPOINT sentencia ELIF LPAREN comparison comparisons RPAREN DPOINT sentencia ELSE DPOINT sentencia
    (73) if -> . IF comparison DPOINT sentencia ELIF comparison DPOINT sentencia ELSE DPOINT sentencia
    (74) if -> . IF comparison comparisons DPOINT sentencia ELIF comparison comparisons DPOINT sentencia ELSE DPOINT sentencia
    (75) if -> . IF LPAREN comparison RPAREN DPOINT sentencia ELIF LPAREN comparison RPAREN DPOINT sentencia
    (76) if -> . IF LPAREN comparison comparisons RPAREN DPOINT sentencia ELIF LPAREN comparison comparisons RPAREN DPOINT sentencia
    (77) if -> . IF comparison DPOINT sentencia ELIF comparison DPOINT sentencia
    (78) if -> . IF comparison comparisons DPOINT sentencia ELIF comparison comparisons DPOINT sentencia

  ! shift/reduce conflict for NAME resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for IF resolved as shift
    $end            reduce using rule 1 (sentencia -> assign .)
    ELSE            reduce using rule 1 (sentencia -> assign .)
    ELIF            reduce using rule 1 (sentencia -> assign .)
    NAME            shift and go to state 6
    FOR             shift and go to state 7
    WHILE           shift and go to state 8
    IF              shift and go to state 9

  ! NAME            [ reduce using rule 1 (sentencia -> assign .) ]
  ! FOR             [ reduce using rule 1 (sentencia -> assign .) ]
  ! WHILE           [ reduce using rule 1 (sentencia -> assign .) ]
  ! IF              [ reduce using rule 1 (sentencia -> assign .) ]

    assign                         shift and go to state 2
    sentencia                      shift and go to state 10
    for                            shift and go to state 3
    while                          shift and go to state 4
    if                             shift and go to state 5

state 3

    (2) sentencia -> for .
    (6) sentencia -> for . sentencia
    (1) sentencia -> . assign
    (2) sentencia -> . for
    (3) sentencia -> . while
    (4) sentencia -> . if
    (5) sentencia -> . assign sentencia
    (6) sentencia -> . for sentencia
    (7) sentencia -> . while sentencia
    (8) sentencia -> . if sentencia
    (9) assign -> . NAME EQUALS expr
    (10) assign -> . NAME EQUALS list
    (11) assign -> . NAME EQUALS cad
    (56) for -> . FOR NAME IN RANGE LPAREN r_value RPAREN DPOINT assign
    (57) for -> . FOR NAME IN RANGE LPAREN r_values RPAREN DPOINT assign
    (58) for -> . FOR NAME IN NAME DPOINT assign
    (36) while -> . WHILE LPAREN comparison RPAREN DPOINT sentencia
    (37) while -> . WHILE comparison DPOINT sentencia
    (38) while -> . WHILE LPAREN comparison comparisons RPAREN DPOINT sentencia
    (39) while -> . WHILE comparison comparisons DPOINT sentencia
    (63) if -> . IF LPAREN comparison RPAREN DPOINT sentencia
    (64) if -> . IF LPAREN comparison comparisons RPAREN DPOINT sentencia
    (65) if -> . IF comparison DPOINT sentencia
    (66) if -> . IF comparison comparisons DPOINT sentencia
    (67) if -> . IF LPAREN comparison RPAREN DPOINT sentencia ELSE DPOINT sentencia
    (68) if -> . IF LPAREN comparison comparisons RPAREN DPOINT sentencia ELSE DPOINT sentencia
    (69) if -> . IF comparison DPOINT sentencia ELSE DPOINT sentencia
    (70) if -> . IF comparison comparisons DPOINT sentencia ELSE DPOINT sentencia
    (71) if -> . IF LPAREN comparison RPAREN DPOINT sentencia ELIF LPAREN comparison RPAREN DPOINT sentencia ELSE DPOINT sentencia
    (72) if -> . IF LPAREN comparison comparisons RPAREN DPOINT sentencia ELIF LPAREN comparison comparisons RPAREN DPOINT sentencia ELSE DPOINT sentencia
    (73) if -> . IF comparison DPOINT sentencia ELIF comparison DPOINT sentencia ELSE DPOINT sentencia
    (74) if -> . IF comparison comparisons DPOINT sentencia ELIF comparison comparisons DPOINT sentencia ELSE DPOINT sentencia
    (75) if -> . IF LPAREN comparison RPAREN DPOINT sentencia ELIF LPAREN comparison RPAREN DPOINT sentencia
    (76) if -> . IF LPAREN comparison comparisons RPAREN DPOINT sentencia ELIF LPAREN comparison comparisons RPAREN DPOINT sentencia
    (77) if -> . IF comparison DPOINT sentencia ELIF comparison DPOINT sentencia
    (78) if -> . IF comparison comparisons DPOINT sentencia ELIF comparison comparisons DPOINT sentencia

  ! shift/reduce conflict for NAME resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for IF resolved as shift
    $end            reduce using rule 2 (sentencia -> for .)
    ELSE            reduce using rule 2 (sentencia -> for .)
    ELIF            reduce using rule 2 (sentencia -> for .)
    NAME            shift and go to state 6
    FOR             shift and go to state 7
    WHILE           shift and go to state 8
    IF              shift and go to state 9

  ! NAME            [ reduce using rule 2 (sentencia -> for .) ]
  ! FOR             [ reduce using rule 2 (sentencia -> for .) ]
  ! WHILE           [ reduce using rule 2 (sentencia -> for .) ]
  ! IF              [ reduce using rule 2 (sentencia -> for .) ]

    for                            shift and go to state 3
    sentencia                      shift and go to state 11
    assign                         shift and go to state 2
    while                          shift and go to state 4
    if                             shift and go to state 5

state 4

    (3) sentencia -> while .
    (7) sentencia -> while . sentencia
    (1) sentencia -> . assign
    (2) sentencia -> . for
    (3) sentencia -> . while
    (4) sentencia -> . if
    (5) sentencia -> . assign sentencia
    (6) sentencia -> . for sentencia
    (7) sentencia -> . while sentencia
    (8) sentencia -> . if sentencia
    (9) assign -> . NAME EQUALS expr
    (10) assign -> . NAME EQUALS list
    (11) assign -> . NAME EQUALS cad
    (56) for -> . FOR NAME IN RANGE LPAREN r_value RPAREN DPOINT assign
    (57) for -> . FOR NAME IN RANGE LPAREN r_values RPAREN DPOINT assign
    (58) for -> . FOR NAME IN NAME DPOINT assign
    (36) while -> . WHILE LPAREN comparison RPAREN DPOINT sentencia
    (37) while -> . WHILE comparison DPOINT sentencia
    (38) while -> . WHILE LPAREN comparison comparisons RPAREN DPOINT sentencia
    (39) while -> . WHILE comparison comparisons DPOINT sentencia
    (63) if -> . IF LPAREN comparison RPAREN DPOINT sentencia
    (64) if -> . IF LPAREN comparison comparisons RPAREN DPOINT sentencia
    (65) if -> . IF comparison DPOINT sentencia
    (66) if -> . IF comparison comparisons DPOINT sentencia
    (67) if -> . IF LPAREN comparison RPAREN DPOINT sentencia ELSE DPOINT sentencia
    (68) if -> . IF LPAREN comparison comparisons RPAREN DPOINT sentencia ELSE DPOINT sentencia
    (69) if -> . IF comparison DPOINT sentencia ELSE DPOINT sentencia
    (70) if -> . IF comparison comparisons DPOINT sentencia ELSE DPOINT sentencia
    (71) if -> . IF LPAREN comparison RPAREN DPOINT sentencia ELIF LPAREN comparison RPAREN DPOINT sentencia ELSE DPOINT sentencia
    (72) if -> . IF LPAREN comparison comparisons RPAREN DPOINT sentencia ELIF LPAREN comparison comparisons RPAREN DPOINT sentencia ELSE DPOINT sentencia
    (73) if -> . IF comparison DPOINT sentencia ELIF comparison DPOINT sentencia ELSE DPOINT sentencia
    (74) if -> . IF comparison comparisons DPOINT sentencia ELIF comparison comparisons DPOINT sentencia ELSE DPOINT sentencia
    (75) if -> . IF LPAREN comparison RPAREN DPOINT sentencia ELIF LPAREN comparison RPAREN DPOINT sentencia
    (76) if -> . IF LPAREN comparison comparisons RPAREN DPOINT sentencia ELIF LPAREN comparison comparisons RPAREN DPOINT sentencia
    (77) if -> . IF comparison DPOINT sentencia ELIF comparison DPOINT sentencia
    (78) if -> . IF comparison comparisons DPOINT sentencia ELIF comparison comparisons DPOINT sentencia

  ! shift/reduce conflict for NAME resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for IF resolved as shift
    $end            reduce using rule 3 (sentencia -> while .)
    ELSE            reduce using rule 3 (sentencia -> while .)
    ELIF            reduce using rule 3 (sentencia -> while .)
    NAME            shift and go to state 6
    FOR             shift and go to state 7
    WHILE           shift and go to state 8
    IF              shift and go to state 9

  ! NAME            [ reduce using rule 3 (sentencia -> while .) ]
  ! FOR             [ reduce using rule 3 (sentencia -> while .) ]
  ! WHILE           [ reduce using rule 3 (sentencia -> while .) ]
  ! IF              [ reduce using rule 3 (sentencia -> while .) ]

    while                          shift and go to state 4
    sentencia                      shift and go to state 12
    assign                         shift and go to state 2
    for                            shift and go to state 3
    if                             shift and go to state 5

state 5

    (4) sentencia -> if .
    (8) sentencia -> if . sentencia
    (1) sentencia -> . assign
    (2) sentencia -> . for
    (3) sentencia -> . while
    (4) sentencia -> . if
    (5) sentencia -> . assign sentencia
    (6) sentencia -> . for sentencia
    (7) sentencia -> . while sentencia
    (8) sentencia -> . if sentencia
    (9) assign -> . NAME EQUALS expr
    (10) assign -> . NAME EQUALS list
    (11) assign -> . NAME EQUALS cad
    (56) for -> . FOR NAME IN RANGE LPAREN r_value RPAREN DPOINT assign
    (57) for -> . FOR NAME IN RANGE LPAREN r_values RPAREN DPOINT assign
    (58) for -> . FOR NAME IN NAME DPOINT assign
    (36) while -> . WHILE LPAREN comparison RPAREN DPOINT sentencia
    (37) while -> . WHILE comparison DPOINT sentencia
    (38) while -> . WHILE LPAREN comparison comparisons RPAREN DPOINT sentencia
    (39) while -> . WHILE comparison comparisons DPOINT sentencia
    (63) if -> . IF LPAREN comparison RPAREN DPOINT sentencia
    (64) if -> . IF LPAREN comparison comparisons RPAREN DPOINT sentencia
    (65) if -> . IF comparison DPOINT sentencia
    (66) if -> . IF comparison comparisons DPOINT sentencia
    (67) if -> . IF LPAREN comparison RPAREN DPOINT sentencia ELSE DPOINT sentencia
    (68) if -> . IF LPAREN comparison comparisons RPAREN DPOINT sentencia ELSE DPOINT sentencia
    (69) if -> . IF comparison DPOINT sentencia ELSE DPOINT sentencia
    (70) if -> . IF comparison comparisons DPOINT sentencia ELSE DPOINT sentencia
    (71) if -> . IF LPAREN comparison RPAREN DPOINT sentencia ELIF LPAREN comparison RPAREN DPOINT sentencia ELSE DPOINT sentencia
    (72) if -> . IF LPAREN comparison comparisons RPAREN DPOINT sentencia ELIF LPAREN comparison comparisons RPAREN DPOINT sentencia ELSE DPOINT sentencia
    (73) if -> . IF comparison DPOINT sentencia ELIF comparison DPOINT sentencia ELSE DPOINT sentencia
    (74) if -> . IF comparison comparisons DPOINT sentencia ELIF comparison comparisons DPOINT sentencia ELSE DPOINT sentencia
    (75) if -> . IF LPAREN comparison RPAREN DPOINT sentencia ELIF LPAREN comparison RPAREN DPOINT sentencia
    (76) if -> . IF LPAREN comparison comparisons RPAREN DPOINT sentencia ELIF LPAREN comparison comparisons RPAREN DPOINT sentencia
    (77) if -> . IF comparison DPOINT sentencia ELIF comparison DPOINT sentencia
    (78) if -> . IF comparison comparisons DPOINT sentencia ELIF comparison comparisons DPOINT sentencia

  ! shift/reduce conflict for NAME resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for IF resolved as shift
    $end            reduce using rule 4 (sentencia -> if .)
    ELSE            reduce using rule 4 (sentencia -> if .)
    ELIF            reduce using rule 4 (sentencia -> if .)
    NAME            shift and go to state 6
    FOR             shift and go to state 7
    WHILE           shift and go to state 8
    IF              shift and go to state 9

  ! NAME            [ reduce using rule 4 (sentencia -> if .) ]
  ! FOR             [ reduce using rule 4 (sentencia -> if .) ]
  ! WHILE           [ reduce using rule 4 (sentencia -> if .) ]
  ! IF              [ reduce using rule 4 (sentencia -> if .) ]

    if                             shift and go to state 5
    sentencia                      shift and go to state 13
    assign                         shift and go to state 2
    for                            shift and go to state 3
    while                          shift and go to state 4

state 6

    (9) assign -> NAME . EQUALS expr
    (10) assign -> NAME . EQUALS list
    (11) assign -> NAME . EQUALS cad

    EQUALS          shift and go to state 14


state 7

    (56) for -> FOR . NAME IN RANGE LPAREN r_value RPAREN DPOINT assign
    (57) for -> FOR . NAME IN RANGE LPAREN r_values RPAREN DPOINT assign
    (58) for -> FOR . NAME IN NAME DPOINT assign

    NAME            shift and go to state 15


state 8
